# MockInterview-Agent

./: .gitignore  PROJECT.md  README.md  memory.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/mockinterview/: config.py  main.py
backend/src/mockinterview/agent/: client.py  drill_eval.py  drill_loop.py  drill_storage.py  exemplar.py  mock_aggregator.py  question_gen.py  resume_parser.py  rubrics.py  seed_bank.py  user_signals.py
backend/src/mockinterview/agent/prompts/: drill_eval.py  exemplar.py  prompt_mode.py  question_gen.py  resume_parse.py  scenario_switch.py
backend/src/mockinterview/agent/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py  test_support.py
backend/src/mockinterview/configs/rubrics/: t1_star.yaml  t2_quant.yaml  t3_jd_align.yaml  t4_structured.yaml  t5_motivation.yaml
backend/src/mockinterview/db/: models.py  session.py
backend/src/mockinterview/routes/: _deps.py  drill.py  mock.py  provider.py  questions.py  reports.py  resume.py
backend/src/mockinterview/schemas/: api.py  drill.py  provider.py  question.py  resume.py
backend/tests/: conftest.py  test_agent_client.py  test_connection.py  test_db_models.py  test_drill_eval.py  test_drill_loop.py  test_exemplar.py  test_prompt_mode.py  test_providers.py  test_question_gen.py  test_resume_parser.py  test_routes_drill.py  test_routes_mock.py  test_routes_questions.py  test_routes_reports.py  test_routes_resume.py  test_rubrics.py  test_scenario_switch.py  test_seed_bank.py  test_user_signals.py
docs/: byok.md  deployment.md  (+4 more)
(+68 files in other folders)
